--- a/UI/blackjack/playwindow.ui
+++ b/UI/blackjack/playwindow.ui
@@ -68,7 +68,7 @@ border-width: 2px;</string>
     </widget>
    </widget>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>340</x>
@@ -105,7 +105,7 @@ border-width: 1px;</string>
          <string/>
         </property>
         <property name="pixmap">
-         <pixmap>back.png</pixmap>
+         <pixmap resource="A_h.qrc">:/resource/back.png</pixmap>
         </property>
         <property name="scaledContents">
          <bool>true</bool>
@@ -294,7 +294,7 @@ border-width: 1px;</string>
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>800</x>
@@ -332,13 +332,13 @@ border-width: 1px;</string>
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>280</y>
+     <y>211</y>
      <width>956</width>
-     <height>182</height>
+     <height>251</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="listPlayer">
@@ -455,7 +455,7 @@ border-width: 1px;</string>
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>270</x>
