--- a/UI/blackjack/playwindow.ui
+++ b/UI/blackjack/playwindow.ui
@@ -68,7 +68,7 @@ border-width: 2px;</string>
     </widget>
    </widget>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>340</x>
@@ -294,7 +294,7 @@ border-width: 1px;</string>
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>800</x>
@@ -305,7 +305,7 @@ border-width: 1px;</string>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <widget class="QPushButton" name="pushButton_37">
+     <widget class="QPushButton" name="quitBtn">
       <property name="minimumSize">
        <size>
         <width>100</width>
@@ -321,7 +321,7 @@ border-width: 1px;</string>
      </widget>
     </item>
     <item>
-     <widget class="QPushButton" name="pushButton_38">
+     <widget class="QPushButton" name="inviteBtn">
       <property name="styleSheet">
        <string notr="true">background-color: rgb(58, 32, 32);</string>
       </property>
@@ -332,7 +332,7 @@ border-width: 1px;</string>
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>50</x>
@@ -455,7 +455,7 @@ border-width: 1px;</string>
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>270</x>
