--- a/UI/blackjack/player.ui
+++ b/UI/blackjack/player.ui
@@ -187,6 +187,16 @@ border-width: 1px;</string>
        </property>
       </spacer>
      </item>
+     <item>
+      <widget class="QLabel" name="point">
+       <property name="text">
+        <string>6</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
