--- a/UI/blackjack/roomitemwidget.ui
+++ b/UI/blackjack/roomitemwidget.ui
@@ -56,7 +56,7 @@ border-radius: 10px;
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="joinRoombtn">
         <property name="cursor">
          <cursorShape>PointingHandCursor</cursorShape>
         </property>
