--- a/UI/blackjack/player.ui
+++ b/UI/blackjack/player.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>336</width>
-    <height>312</height>
+    <height>365</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -303,6 +303,24 @@ border-width: 1px;</string>
         <number>6</number>
        </property>
        <item>
+        <widget class="QLabel" name="label">
+         <property name="font">
+          <font>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color: rgb(255, 249, 100);</string>
+         </property>
+         <property name="text">
+          <string>5K</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QLabel" name="avatar">
          <property name="minimumSize">
           <size>
@@ -339,6 +357,14 @@ border-width: 1px;</string>
        </item>
        <item>
         <widget class="QLabel" name="money">
+         <property name="font">
+          <font>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color: rgb(255, 249, 100);</string>
+         </property>
          <property name="text">
           <string>65K</string>
          </property>
