--- a/UI/blackjack/playwindow.ui
+++ b/UI/blackjack/playwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1020</width>
-    <height>579</height>
+    <height>686</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -348,9 +348,9 @@ border-radius: 15px;</string>
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>211</y>
+     <y>291</y>
      <width>956</width>
-     <height>251</height>
+     <height>271</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="listPlayer">
@@ -471,7 +471,7 @@ border-radius: 15px;</string>
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>470</y>
+     <y>580</y>
      <width>557</width>
      <height>104</height>
     </rect>
@@ -651,6 +651,28 @@ border-radius: 15px;</string>
      </spacer>
     </item>
    </layout>
+  </widget>
+  <widget class="QLabel" name="Notification">
+   <property name="geometry">
+    <rect>
+     <x>357</x>
+     <y>195</y>
+     <width>331</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>18</pointsize>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Start New Round</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
   </widget>
  </widget>
  <customwidgets>
