--- a/UI/blackjack/roomitemwidget.ui
+++ b/UI/blackjack/roomitemwidget.ui
@@ -33,6 +33,9 @@ border-radius: 10px;
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="0" column="0">
        <widget class="QLabel" name="label">
+        <property name="styleSheet">
+         <string notr="true">color: white;</string>
+        </property>
         <property name="text">
          <string>ROOM 1</string>
         </property>
@@ -40,6 +43,9 @@ border-radius: 10px;
       </item>
       <item row="0" column="1">
        <widget class="QLabel" name="label_2">
+        <property name="styleSheet">
+         <string notr="true">color:white;</string>
+        </property>
         <property name="text">
          <string>2 Players</string>
         </property>
@@ -50,6 +56,9 @@ border-radius: 10px;
       </item>
       <item row="1" column="0">
        <widget class="QLabel" name="label_3">
+        <property name="styleSheet">
+         <string notr="true">color:white;</string>
+        </property>
         <property name="text">
          <string>Min Credit: 5k</string>
         </property>
