--- a/UI/blackjack/onlineplayer.ui
+++ b/UI/blackjack/onlineplayer.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>300</width>
+    <width>252</width>
     <height>74</height>
    </rect>
   </property>
@@ -59,6 +59,17 @@
    </item>
    <item>
     <widget class="QLabel" name="username">
+     <property name="font">
+      <font>
+       <family>Ubuntu Mono</family>
+       <pointsize>16</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color:white;</string>
+     </property>
      <property name="text">
       <string>Bryan</string>
      </property>
@@ -79,6 +90,17 @@
    </item>
    <item>
     <widget class="QLabel" name="statusLabel">
+     <property name="font">
+      <font>
+       <family>Umpush</family>
+       <pointsize>16</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color:white;</string>
+     </property>
      <property name="text">
       <string>Playing</string>
      </property>
