add game status

--- a/UI/blackjack/A_h.qrc
+++ b/UI/blackjack/A_h.qrc
@@ -1,69 +1,66 @@
 <RCC>
     <qresource prefix="/resource">
-        <file>A_h.png</file>
         <file>avater.png</file>
-        <file>K_h.png</file>
         <file>avatar.png</file>
         <file>back.png</file>
-        <file>10♥.png</file>
     </qresource>
     <qresource prefix="/hearts">
-        <file>10♥.png</file>
-        <file>9♥.png</file>
-        <file>8♥.png</file>
-        <file>7♥.png</file>
-        <file>6♥.png</file>
-        <file>5♥.png</file>
-        <file>4♥.png</file>
-        <file>3♥.png</file>
-        <file>2♥.png</file>
-        <file>K♥.png</file>
-        <file>J♥.png</file>
-        <file>Q♥.png</file>
+        <file>10_h.png</file>
+        <file>9_h.png</file>
+        <file>8_h.png</file>
+        <file>7_h.png</file>
+        <file>6_h.png</file>
+        <file>5_h.png</file>
+        <file>4_h.png</file>
+        <file>3_h.png</file>
+        <file>2_h.png</file>
+        <file>K_h.png</file>
+        <file>J_h.png</file>
+        <file>Q_h.png</file>
     </qresource>
     <qresource prefix="/diamonds">
-        <file>6♦.png</file>
-        <file>2♦.png</file>
-        <file>3♦.png</file>
-        <file>4♦.png</file>
-        <file>5♦.png</file>
-        <file>8♦.png</file>
-        <file>7♦.png</file>
-        <file>9♦.png</file>
-        <file>10♦.png</file>
-        <file>J♦.png</file>
-        <file>Q♦.png</file>
-        <file>K♦.png</file>
-        <file>A♦.png</file>
+        <file>6_d.png</file>
+        <file>2_d.png</file>
+        <file>3_d.png</file>
+        <file>4_d.png</file>
+        <file>5_d.png</file>
+        <file>8_d.png</file>
+        <file>7_d.png</file>
+        <file>9_d.png</file>
+        <file>10_d.png</file>
+        <file>J_d.png</file>
+        <file>Q_d.png</file>
+        <file>K_d.png</file>
+        <file>A_d.png</file>
     </qresource>
     <qresource prefix="/spades">
-        <file>A♠.png</file>
-        <file>K♠.png</file>
-        <file>Q♠.png</file>
-        <file>J♠.png</file>
-        <file>10♠.png</file>
-        <file>9♠.png</file>
-        <file>8♠.png</file>
-        <file>7♠.png</file>
-        <file>6♠.png</file>
-        <file>5♠.png</file>
-        <file>4♠.png</file>
-        <file>3♠.png</file>
-        <file>2♠.png</file>
+        <file>A_s.png</file>
+        <file>K_s.png</file>
+        <file>Q_s.png</file>
+        <file>J_s.png</file>
+        <file>10_s.png</file>
+        <file>9_s.png</file>
+        <file>8_s.png</file>
+        <file>7_s.png</file>
+        <file>6_s.png</file>
+        <file>5_s.png</file>
+        <file>4_s.png</file>
+        <file>3_s.png</file>
+        <file>2_s.png</file>
     </qresource>
     <qresource prefix="/clubs">
-        <file>2♣.png</file>
-        <file>3♣.png</file>
-        <file>4♣.png</file>
-        <file>5♣.png</file>
-        <file>6♣.png</file>
-        <file>7♣.png</file>
-        <file>9♣.png</file>
-        <file>8♣.png</file>
-        <file>10♣.png</file>
-        <file>J♣.png</file>
-        <file>Q♣.png</file>
-        <file>K♣.png</file>
-        <file>A♣.png</file>
+        <file>2_c.png</file>
+        <file>3_c.png</file>
+        <file>4_c.png</file>
+        <file>5_c.png</file>
+        <file>6_c.png</file>
+        <file>7_c.png</file>
+        <file>9_c.png</file>
+        <file>8_c.png</file>
+        <file>10_c.png</file>
+        <file>J_c.png</file>
+        <file>Q_c.png</file>
+        <file>K_c.png</file>
+        <file>A_c.png</file>
     </qresource>
 </RCC>
