--- a/UI/blackjack/player.ui
+++ b/UI/blackjack/player.ui
@@ -138,7 +138,7 @@ color: rgb(255, 255, 255);</string>
          </spacer>
         </item>
         <item>
-         <layout class="QHBoxLayout" name="list_card_5">
+         <layout class="QHBoxLayout" name="list_card">
           <property name="spacing">
            <number>1</number>
           </property>
@@ -164,7 +164,7 @@ border-width: 1px;</string>
              <string/>
             </property>
             <property name="pixmap">
-             <pixmap resource="A_h.qrc">:/resource/A_h.png</pixmap>
+             <pixmap>:/resource/A_h.png</pixmap>
             </property>
             <property name="scaledContents">
              <bool>true</bool>
@@ -172,100 +172,7 @@ border-width: 1px;</string>
            </widget>
           </item>
           <item>
-           <widget class="QLabel" name="label_38">
-            <property name="minimumSize">
-             <size>
-              <width>0</width>
-              <height>0</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>50</width>
-              <height>70</height>
-             </size>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">border-color: rgb(0, 0, 0);
-border-width: 1px;</string>
-            </property>
-            <property name="text">
-             <string/>
-            </property>
-            <property name="pixmap">
-             <pixmap resource="A_h.qrc">:/resource/A_h.png</pixmap>
-            </property>
-            <property name="scaledContents">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLabel" name="label_39">
-            <property name="minimumSize">
-             <size>
-              <width>0</width>
-              <height>0</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>50</width>
-              <height>70</height>
-             </size>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">border-color: rgb(0, 0, 0);
-border-width: 1px;</string>
-            </property>
-            <property name="text">
-             <string/>
-            </property>
-            <property name="pixmap">
-             <pixmap resource="A_h.qrc">:/resource/A_h.png</pixmap>
-            </property>
-            <property name="scaledContents">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLabel" name="label_40">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="minimumSize">
-             <size>
-              <width>0</width>
-              <height>0</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>50</width>
-              <height>70</height>
-             </size>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">border-color: rgb(0, 0, 0);
-border-width: 1px;</string>
-            </property>
-            <property name="text">
-             <string/>
-            </property>
-            <property name="pixmap">
-             <pixmap resource="A_h.qrc">:/resource/A_h.png</pixmap>
-            </property>
-            <property name="scaledContents">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLabel" name="point">
+           <widget class="QLabel" name="score">
             <property name="text">
              <string>6</string>
             </property>
@@ -315,7 +222,7 @@ border-width: 1px;</string>
            <number>6</number>
           </property>
           <item>
-           <widget class="QLabel" name="label">
+           <widget class="QLabel" name="betting">
             <property name="font">
              <font>
               <bold>true</bold>
