--- a/UI/blackjack/carditem.ui
+++ b/UI/blackjack/carditem.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>56</width>
-    <height>76</height>
+    <width>50</width>
+    <height>70</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -29,7 +29,7 @@
    <property name="spacing">
     <number>0</number>
    </property>
-   <item row="0" column="1">
+   <item row="0" column="0" colspan="3">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -65,8 +65,8 @@
     <widget class="QLabel" name="Card_Item">
      <property name="minimumSize">
       <size>
-       <width>50</width>
-       <height>70</height>
+       <width>0</width>
+       <height>0</height>
       </size>
      </property>
      <property name="maximumSize">
@@ -75,8 +75,18 @@
        <height>70</height>
       </size>
      </property>
+     <property name="styleSheet">
+      <string notr="true">border-color: rgb(0, 0, 0);
+border-width: 1px;</string>
+     </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string/>
+     </property>
+     <property name="pixmap">
+      <pixmap resource="A_h.qrc">:/resource/back.png</pixmap>
+     </property>
+     <property name="scaledContents">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
@@ -114,6 +124,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="A_h.qrc"/>
+ </resources>
  <connections/>
 </ui>
