--- a/UI/blackjack/player.ui
+++ b/UI/blackjack/player.ui
@@ -33,80 +33,6 @@
     <widget class="QWidget" name="widget_2" native="true">
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
-       <widget class="QWidget" name="widget" native="true">
-        <layout class="QHBoxLayout" name="horizontalLayout_3">
-         <property name="spacing">
-          <number>0</number>
-         </property>
-         <property name="leftMargin">
-          <number>0</number>
-         </property>
-         <property name="topMargin">
-          <number>0</number>
-         </property>
-         <property name="rightMargin">
-          <number>0</number>
-         </property>
-         <property name="bottomMargin">
-          <number>0</number>
-         </property>
-         <item>
-          <spacer name="horizontalSpacer_3">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>119</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item>
-          <widget class="QPushButton" name="readyBtn">
-           <property name="minimumSize">
-            <size>
-             <width>70</width>
-             <height>20</height>
-            </size>
-           </property>
-           <property name="font">
-            <font>
-             <pointsize>14</pointsize>
-             <bold>true</bold>
-            </font>
-           </property>
-           <property name="cursor">
-            <cursorShape>PointingHandCursor</cursorShape>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">background-color: rgb(242, 78, 30);
-border-radius:10px;
-color: rgb(255, 255, 255);</string>
-           </property>
-           <property name="text">
-            <string>Ready</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <spacer name="horizontalSpacer_4">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>118</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-        </layout>
-       </widget>
-      </item>
-      <item>
        <widget class="QLabel" name="status">
         <property name="text">
          <string>Status</string>
@@ -232,7 +158,7 @@ border-width: 1px;</string>
              <string notr="true">color: rgb(255, 249, 100);</string>
             </property>
             <property name="text">
-             <string>5K</string>
+             <string>Bet money : 5K</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignCenter</set>
@@ -285,7 +211,7 @@ border-width: 1px;</string>
              <string notr="true">color: rgb(255, 249, 100);</string>
             </property>
             <property name="text">
-             <string>65K</string>
+             <string>Your money : 65K</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignCenter</set>
