--- a/UI/blackjack/playwindow.ui
+++ b/UI/blackjack/playwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1045</width>
-    <height>686</height>
+    <width>1133</width>
+    <height>732</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -77,7 +77,7 @@ border-width: 2px;</string>
      <height>86</height>
     </rect>
    </property>
-   <layout class="QHBoxLayout" name="horizontalLayout_18">
+   <layout class="QHBoxLayout" name="dealer_info">
     <property name="spacing">
      <number>25</number>
     </property>
@@ -137,7 +137,7 @@ border-width: 1px;</string>
          <string/>
         </property>
         <property name="pixmap">
-         <pixmap resource="A_h.qrc">:/resource/A_h.png</pixmap>
+         <pixmap>:/resource/A_h.png</pixmap>
         </property>
         <property name="scaledContents">
          <bool>true</bool>
@@ -147,12 +147,12 @@ border-width: 1px;</string>
      </layout>
     </item>
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_24">
+     <layout class="QHBoxLayout" name="dealer_play">
       <property name="spacing">
        <number>5</number>
       </property>
       <item>
-       <layout class="QHBoxLayout" name="list_card_11">
+       <layout class="QHBoxLayout" name="dealer">
         <property name="spacing">
          <number>1</number>
         </property>
@@ -178,7 +178,7 @@ border-width: 1px;</string>
            <string/>
           </property>
           <property name="pixmap">
-           <pixmap resource="A_h.qrc">:/resource/A_h.png</pixmap>
+           <pixmap>:/resource/A_h.png</pixmap>
           </property>
           <property name="scaledContents">
            <bool>true</bool>
@@ -207,7 +207,7 @@ border-width: 1px;</string>
            <string/>
           </property>
           <property name="pixmap">
-           <pixmap resource="A_h.qrc">:/resource/A_h.png</pixmap>
+           <pixmap>:/resource/A_h.png</pixmap>
           </property>
           <property name="scaledContents">
            <bool>true</bool>
@@ -236,7 +236,7 @@ border-width: 1px;</string>
            <string/>
           </property>
           <property name="pixmap">
-           <pixmap resource="A_h.qrc">:/resource/A_h.png</pixmap>
+           <pixmap>:/resource/A_h.png</pixmap>
           </property>
           <property name="scaledContents">
            <bool>true</bool>
@@ -271,7 +271,7 @@ border-width: 1px;</string>
            <string/>
           </property>
           <property name="pixmap">
-           <pixmap resource="A_h.qrc">:/resource/A_h.png</pixmap>
+           <pixmap>:/resource/A_h.png</pixmap>
           </property>
           <property name="scaledContents">
            <bool>true</bool>
@@ -289,7 +289,7 @@ border-width: 1px;</string>
          </font>
         </property>
         <property name="text">
-         <string>15</string>
+         <string>0</string>
         </property>
        </widget>
       </item>
@@ -362,13 +362,16 @@ border-radius: 15px;</string>
     <rect>
      <x>5</x>
      <y>291</y>
-     <width>1061</width>
+     <width>1131</width>
      <height>271</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="listPlayer">
     <property name="spacing">
      <number>0</number>
+    </property>
+    <property name="sizeConstraint">
+     <enum>QLayout::SetDefaultConstraint</enum>
     </property>
     <item>
      <widget class="player" name="widget" native="true">
